--- a/app/src/main/res/layout/fragment_dashboard_mobile.xml
+++ b/app/src/main/res/layout/fragment_dashboard_mobile.xml
@@ -660,6 +660,110 @@
         android:layout_marginHorizontal="12dp"
         app:cardCornerRadius="6dp"
         app:cardElevation="6dp"/>
+            <androidx.cardview.widget.CardView
+                android:id="@+id/header_recycler"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="@id/cv7"
+                app:layout_constraintEnd_toEndOf="@id/cv7"
+                app:layout_constraintTop_toBottomOf="@id/cv7"
+                app:cardBackgroundColor="#303844"
+                android:layout_marginTop="9dp"
+                app:cardCornerRadius="6dp">
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginBottom="14dp">
+                <TextView
+                    android:id="@+id/txt_seller"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:text="Top Sellers"
+                    android:fontFamily="@font/roboto_medium"
+                    android:layout_marginStart="9dp"
+                    android:layout_marginTop="9dp"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/H5"/>
+                    <ImageView
+                        android:layout_width="16dp"
+                        android:layout_height="16dp"
+                        app:layout_constraintStart_toEndOf="@id/txt_seller"
+                        app:layout_constraintTop_toTopOf="@id/txt_seller"
+                        app:layout_constraintBottom_toBottomOf="@id/txt_seller"
+                        android:src="@drawable/svg_arrow_down"
+                        android:layout_marginStart="6dp"
+                        app:tint="@color/white" />
+                    <androidx.constraintlayout.widget.Guideline
+                        android:id="@+id/guide"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        app:layout_constraintGuide_percent="0.38"/>
+                    <TextView
+                        android:id="@+id/txt_revenu"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintStart_toEndOf="@id/guide"
+                        app:layout_constraintTop_toTopOf="@id/txt_seller"
+                        android:text="Revenue"
+                        android:textSize="@dimen/H5"
+                        android:fontFamily="@font/roboto_medium"
+                        android:textColor="@color/white"/>
+                    <TextView
+                        android:id="@+id/txt_night"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintStart_toEndOf="@id/txt_revenu"
+                        app:layout_constraintTop_toTopOf="@id/txt_revenu"
+                        app:layout_constraintBottom_toBottomOf="@id/txt_revenu"
+                        app:layout_constraintEnd_toStartOf="@id/txt_adr"
+                        android:textColor="@color/white"
+                        android:fontFamily="@font/roboto_medium"
+                        android:textSize="@dimen/H5"
+                        android:text="Nights Sold"/>
+                    <TextView
+                        android:id="@+id/txt_adr"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintStart_toEndOf="@id/txt_night"
+                        app:layout_constraintTop_toTopOf="@id/txt_revenu"
+                        app:layout_constraintBottom_toBottomOf="@id/txt_revenu"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:textColor="@color/white"
+                        android:fontFamily="@font/roboto_medium"
+                        android:textSize="@dimen/H5"
+                        android:text="ADR"/>
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.cardview.widget.CardView>
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="@id/header_recycler"
+                app:layout_constraintEnd_toEndOf="@id/header_recycler"
+                app:layout_constraintTop_toBottomOf="@id/header_recycler"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="12dp"
+                android:layout_marginTop="-5dp"
+                android:elevation="9dp"
+                android:background="@color/white">
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recycler_revenue"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="2dp"
+                    app:layout_constraintTop_toTopOf="parent"/>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
+
+
+
         </androidx.constraintlayout.widget.ConstraintLayout>
+
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
