--- a/app/src/main/res/layout/fragment_dash_board.xml
+++ b/app/src/main/res/layout/fragment_dash_board.xml
@@ -572,6 +572,154 @@
                            android:foregroundGravity="center"
                            />
 
+                       <androidx.cardview.widget.CardView
+                           android:id="@+id/card1"
+                           android:layout_width="15dp"
+                           android:layout_height="15dp"
+                           app:layout_constraintTop_toTopOf="@id/pie_chart"
+                           app:layout_constraintStart_toEndOf="@+id/pie_chart"
+                           android:backgroundTint="#FFC656"
+                           android:layout_marginTop="45dp"
+                           android:layout_marginStart="-40dp"
+                           app:cardCornerRadius="5dp"
+                           />
+
+                       <TextView
+                           android:layout_width="wrap_content"
+                           android:layout_height="wrap_content"
+                           app:layout_constraintTop_toTopOf="@+id/card1"
+                           app:layout_constraintStart_toEndOf="@+id/card1"
+                           android:text="Occupied"
+                           app:layout_constraintBottom_toBottomOf="@+id/card1"
+                           android:textSize="@dimen/H5"
+                           android:fontFamily="@font/roboto"
+                           android:layout_marginStart="5dp"
+                           />
+
+                       <TextView
+                           android:layout_width="wrap_content"
+                           android:layout_height="wrap_content"
+                           app:layout_constraintTop_toBottomOf="@+id/card1"
+                           app:layout_constraintStart_toStartOf="@+id/card1"
+                           android:text="128 Rooms"
+                           android:textSize="@dimen/H4"
+                           android:fontFamily="@font/roboto_medium"
+                           android:textColor="@color/textColor"
+                           android:layout_marginTop="5dp"
+                           />
+
+
+
+                       <androidx.cardview.widget.CardView
+                           android:id="@+id/card2"
+                           android:layout_width="15dp"
+                           android:layout_height="15dp"
+                           app:layout_constraintTop_toTopOf="@id/pie_chart"
+                           app:layout_constraintStart_toEndOf="@+id/pie_chart"
+                           android:backgroundTint="#DF513A"
+                           android:layout_marginTop="120dp"
+                           android:layout_marginStart="-40dp"
+                           app:cardCornerRadius="5dp"
+                           />
+
+                       <TextView
+                           android:layout_width="wrap_content"
+                           android:layout_height="wrap_content"
+                           app:layout_constraintTop_toTopOf="@+id/card2"
+                           app:layout_constraintStart_toEndOf="@+id/card2"
+                           android:text="Unavailable"
+                           app:layout_constraintBottom_toBottomOf="@+id/card2"
+                           android:textSize="@dimen/H5"
+                           android:fontFamily="@font/roboto"
+                           android:layout_marginStart="5dp"
+                           />
+
+                       <TextView
+                           android:layout_width="wrap_content"
+                           android:layout_height="wrap_content"
+                           app:layout_constraintTop_toBottomOf="@+id/card2"
+                           app:layout_constraintStart_toStartOf="@+id/card2"
+                           android:text="12 Rooms"
+                           android:textSize="@dimen/H4"
+                           android:fontFamily="@font/roboto_medium"
+                           android:textColor="@color/textColor"
+                           android:layout_marginTop="5dp"
+                           />
+
+
+                       <androidx.cardview.widget.CardView
+                           android:id="@+id/card3"
+                           android:layout_width="15dp"
+                           android:layout_height="15dp"
+                           app:layout_constraintTop_toTopOf="@id/pie_chart"
+                           app:layout_constraintEnd_toStartOf="@+id/pie_chart"
+                           android:backgroundTint="#56E9DA"
+                           android:layout_marginTop="45dp"
+                           android:layout_marginEnd="-40dp"
+                           app:cardCornerRadius="5dp"
+                           />
+
+                       <TextView
+                           android:layout_width="wrap_content"
+                           android:layout_height="wrap_content"
+                           app:layout_constraintTop_toTopOf="@+id/card3"
+                           app:layout_constraintEnd_toStartOf="@+id/card3"
+                           android:text="Available"
+                           app:layout_constraintBottom_toBottomOf="@+id/card3"
+                           android:textSize="@dimen/H5"
+                           android:fontFamily="@font/roboto"
+                           android:layout_marginEnd="5dp"
+                           />
+
+                       <TextView
+                           android:layout_width="wrap_content"
+                           android:layout_height="wrap_content"
+                           app:layout_constraintTop_toBottomOf="@+id/card3"
+                           app:layout_constraintEnd_toEndOf="@+id/card3"
+                           android:text="33 Rooms"
+                           android:textSize="@dimen/H4"
+                           android:fontFamily="@font/roboto_medium"
+                           android:textColor="@color/textColor"
+                           android:layout_marginTop="5dp"
+                           />
+
+
+                       <androidx.cardview.widget.CardView
+                           android:id="@+id/card4"
+                           android:layout_width="15dp"
+                           android:layout_height="15dp"
+                           app:layout_constraintTop_toTopOf="@id/pie_chart"
+                           app:layout_constraintEnd_toStartOf="@+id/pie_chart"
+                           android:backgroundTint="#4B5970"
+                           android:layout_marginTop="120dp"
+                           android:layout_marginEnd="-40dp"
+                           app:cardCornerRadius="5dp"
+                           />
+
+                       <TextView
+                           android:layout_width="wrap_content"
+                           android:layout_height="wrap_content"
+                           app:layout_constraintTop_toTopOf="@+id/card4"
+                           app:layout_constraintEnd_toStartOf="@+id/card4"
+                           android:text="Sold Out"
+                           app:layout_constraintBottom_toBottomOf="@+id/card4"
+                           android:textSize="@dimen/H5"
+                           android:fontFamily="@font/roboto"
+                           android:layout_marginEnd="5dp"
+                           />
+
+                       <TextView
+                           android:layout_width="wrap_content"
+                           android:layout_height="wrap_content"
+                           app:layout_constraintTop_toBottomOf="@+id/card4"
+                           app:layout_constraintEnd_toEndOf="@+id/card4"
+                           android:text="36 Rooms"
+                           android:textSize="@dimen/H4"
+                           android:fontFamily="@font/roboto_medium"
+                           android:textColor="@color/textColor"
+                           android:layout_marginTop="5dp"
+                           />
+
                    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
@@ -620,11 +768,11 @@
                            android:id="@+id/barchart"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
-
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/revenue_text"
                            app:layout_constraintBottom_toBottomOf="parent"
+
                            app:layout_constraintCircleRadius="@dimen/H5"
 
                            />
@@ -762,7 +910,6 @@
         android:layout_weight="1.35"
         android:layout_marginTop="20dp"
         app:cardCornerRadius="15dp"
-        android:layout_marginBottom="20dp"
         app:strokeWidth="0dp"
         android:background="@color/primaryBackground"
         android:backgroundTint="@color/primaryBackground"
@@ -780,7 +927,7 @@
                 android:text="Bookings"
                 android:layout_marginStart="20dp"
                 app:layout_constraintStart_toStartOf="parent"
-                android:textSize="@dimen/H3"
+                android:textSize="@dimen/H4"
                 android:fontFamily="@font/roboto_bold"
                 android:textFontWeight="500"
                 android:textColor="@color/black"
@@ -789,7 +936,7 @@
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/card_icon"
                 android:layout_width="270dp"
-                android:layout_height="50dp"
+                android:layout_height="40dp"
                 app:strokeWidth="0.5dp"
                 app:strokeColor="#EBEBEB"
                 app:layout_constraintTop_toTopOf="parent"
@@ -863,10 +1010,11 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/booking_detail_recycler"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 app:layout_constraintTop_toBottomOf="@+id/linear_1"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 />
 
             <!--            <androidx.constraintlayout.widget.ConstraintLayout-->
