--- a/app/src/main/res/layout/item_booking_details.xml
+++ b/app/src/main/res/layout/item_booking_details.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/primaryBackground"
     android:backgroundTint="@color/primaryBackground"
-    android:layout_marginTop="10dp"
+    android:layout_marginBottom="10dp"
     android:layout_marginHorizontal="20dp"
     app:strokeWidth="0dp"
     app:cardElevation="2dp"
