--- a/app/src/main/res/layout/fragment_add_images.xml
+++ b/app/src/main/res/layout/fragment_add_images.xml
@@ -43,6 +43,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 style="@style/CardViewTheme"
+                android:layout_marginStart="5dp"
                 android:layout_marginTop="10dp"
                 app:cardElevation="2dp"
                 android:layout_marginEnd="10dp"
@@ -82,6 +83,7 @@
                 android:layout_height="wrap_content"
                 style="@style/CardViewTheme"
                 android:layout_marginTop="10dp"
+                android:layout_marginStart="5dp"
                 app:cardElevation="2dp"
                 app:layout_constraintCircleRadius="10dp"
                 android:layout_marginEnd="10dp"
@@ -95,14 +97,16 @@
                     android:layout_height="match_parent"
                     android:padding="5dp">
 
-                    <TextView
+                    <EditText
                         android:id="@+id/enterH"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="4dp"
+                        style="@style/TextAppearance.AppCompat.Body1"
+                        android:background="@null"
+                        android:hint="Enter Image Category Name"
+                        android:layout_marginStart="10dp"
                         android:layout_marginTop="10dp"
                         android:fontFamily="@font/roboto_medium"
-                        android:text="Enter Image Category Name"
                         android:textColor="@color/secondary"
                         android:textSize="@dimen/H5"
                         app:layout_constraintTop_toTopOf="parent"
@@ -126,6 +130,7 @@
                         app:layout_constraintTop_toTopOf="parent"/>
 
                     <androidx.cardview.widget.CardView
+                        android:id="@+id/addImageCard"
                         android:layout_width="70dp"
                         android:layout_height="70dp"
                         style="@style/CardViewTheme"
@@ -171,7 +176,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:layout_marginEnd="10dp"
             app:layout_constraintTop_toBottomOf="@id/imgCategoryLayout"
             tools:listitem="@layout/item_img_category" />
