--- a/app/src/main/res/layout/item_img_category.xml
+++ b/app/src/main/res/layout/item_img_category.xml
@@ -10,8 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         style="@style/CardViewTheme"
-        android:layout_marginTop="5dp"
-        android:layout_marginStart="5dp"
+        android:layout_marginVertical="5dp"
+        android:layout_marginHorizontal="5dp"
         app:cardElevation="2dp"
         app:layout_constraintCircleRadius="10dp"
         app:cardCornerRadius="5dp"
