--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -981,7 +981,7 @@
                                         android:textSize="@dimen/H5" />
                                 </LinearLayout>
                                 <LinearLayout
-                                    android:id="@+id/ll2"
+                                    android:id="@+id/mealPlan"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:background="@color/black"
@@ -998,7 +998,7 @@
                                     <TextView
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
-                                        android:text="Rate Types"
+                                        android:text="Meal Plan"
                                         android:fontFamily="@font/roboto"
                                         android:textColor="@color/white"
                                         android:layout_marginStart="10dp"
@@ -1011,7 +1011,7 @@
                                     android:background="@color/black"
                                     android:layout_marginStart="20dp"
                                     android:layout_marginTop="12dp"
-                                    app:layout_constraintTop_toBottomOf="@id/ll2"
+                                    app:layout_constraintTop_toBottomOf="@id/mealPlan"
                                     android:paddingStart="20dp"
                                     android:orientation="horizontal"
                                     android:gravity="center_vertical">
