--- a/app/src/main/res/layout/fragment_add_property.xml
+++ b/app/src/main/res/layout/fragment_add_property.xml
@@ -334,6 +334,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
                         android:layout_marginTop="10dp"
+                        app:cardBackgroundColor="@color/white"
                         app:cardCornerRadius="10dp"
                         >
                         <RelativeLayout
@@ -345,7 +346,7 @@
                                 android:id="@+id/spinner"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:background="@drawable/rounded_border_white"
+                                android:background="@color/white"
                                 android:paddingStart="10dp"
                                 android:spinnerMode="dropdown"
                                 android:layout_centerVertical="true"
@@ -369,6 +370,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
                         android:layout_marginTop="10dp"
+                        app:cardBackgroundColor="@color/white"
                         app:cardCornerRadius="10dp"
                         >
                         <RelativeLayout
@@ -380,7 +382,7 @@
                                 android:id="@+id/propertyRattingSpinner"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:background="@drawable/rounded_border_white"
+                                android:background="@color/white"
                                 android:paddingStart="10dp"
                                 android:spinnerMode="dropdown"
                                 android:layout_centerVertical="true"
